# JD-site

./: .gitignore  AGENTS.md  README.md  Sites and info.txt  git_Commands.txt  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  forms.py  routes.py
app/agent/: payday_agent.py
app/api/: main.py  schemas.py
app/calculators/: payday.py
app/db/: init_db.py  models.py  seed.py  session.py
app/domain/: models.py
app/templates/: base.html  dashboard.html  index.html
tests/: test_api.py  test_payday_calculator.py
